[gd_scene load_steps=38 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/blackchancery/blackchancery.fnt" type="BitmapFont" id=2]
[ext_resource path="res://sprites/sword.png" type="Texture" id=3]
[ext_resource path="res://sprites/shield.png" type="Texture" id=4]
[ext_resource path="res://sprites/smile.png" type="Texture" id=5]
[ext_resource path="res://sprites/money.png" type="Texture" id=6]
[ext_resource path="res://sprites/mill.png" type="Texture" id=7]
[ext_resource path="res://sprites/millprop1.png" type="Texture" id=8]
[ext_resource path="res://sprites/millprop2.png" type="Texture" id=9]
[ext_resource path="res://sprites/millprop3.png" type="Texture" id=10]
[ext_resource path="res://sprites/millprop4.png" type="Texture" id=11]
[ext_resource path="res://sprites/millprop5.png" type="Texture" id=12]
[ext_resource path="res://sprites/millprop6.png" type="Texture" id=13]
[ext_resource path="res://sprites/millprop7.png" type="Texture" id=14]
[ext_resource path="res://sprites/millprop8.png" type="Texture" id=15]
[ext_resource path="res://sprites/millprop9.png" type="Texture" id=16]
[ext_resource path="res://sprites/millprop10.png" type="Texture" id=17]
[ext_resource path="res://sprites/millprop11.png" type="Texture" id=18]
[ext_resource path="res://sprites/millprop12.png" type="Texture" id=19]
[ext_resource path="res://sprites/forge1.png" type="Texture" id=20]
[ext_resource path="res://sprites/forge2.png" type="Texture" id=21]
[ext_resource path="res://sprites/forge3.png" type="Texture" id=22]
[ext_resource path="res://sprites/domiki.png" type="Texture" id=23]
[ext_resource path="res://sprites/moat.png" type="Texture" id=24]
[ext_resource path="res://sprites/market.png" type="Texture" id=25]
[ext_resource path="res://sprites/tower.png" type="Texture" id=26]
[ext_resource path="res://sprites/castle.png" type="Texture" id=27]
[ext_resource path="res://sprites/background2.png" type="Texture" id=28]
[ext_resource path="res://sprites/interfeys.png" type="Texture" id=29]
[ext_resource path="res://sound/hammering.wav" type="Sample" id=30]
[ext_resource path="res://sound/sharpie.wav" type="Sample" id=31]
[ext_resource path="res://sound/sword.wav" type="Sample" id=32]
[ext_resource path="res://sound/forest.ogg" type="AudioStream" id=33]

[sub_resource type="Animation" id=1]

resource/name = "blink"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ] }

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ], "loop":true, "name":"default", "speed":2.5 } ]

[sub_resource type="SampleLibrary" id=4]

samples/hammering = { "db":0.0, "pitch":1.04, "sample":ExtResource( 30 ) }
samples/sharpie = { "db":0.0, "pitch":1.0, "sample":ExtResource( 31 ) }
samples/sword = { "db":0.0, "pitch":1.0, "sample":ExtResource( 32 ) }

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="main_text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 589.0
margin/right = 760.0
margin/bottom = 721.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "Greetings!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="left" type="Label" parent="."]

visibility/opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 747.0
margin/top = 587.0
margin/right = 1014.0
margin/bottom = 719.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="right" type="Label" parent="."]

visibility/opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1018.0
margin/top = 586.0
margin/right = 1280.0
margin/bottom = 718.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="army" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 894.0
margin/top = 68.0
margin/right = 1076.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="sword_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 640, 360 )
texture = ExtResource( 3 )
__meta__ = { "_edit_lock_":true }

[node name="armor" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 989.0
margin/top = 69.0
margin/right = 1182.0
margin/bottom = 113.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="shield_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 640, 360 )
texture = ExtResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="peace_hud" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1089.0
margin/top = 1.0
margin/right = 1280.0
margin/bottom = 91.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="smile_sprite" type="Sprite" parent="peace_hud"]

transform/pos = Vector2( -449, 359 )
texture = ExtResource( 5 )
__meta__ = { "_edit_lock_":true }

[node name="money_sprite" type="Sprite" parent="peace_hud"]

transform/pos = Vector2( -449, 359 )
texture = ExtResource( 6 )
__meta__ = { "_edit_lock_":true }

[node name="loyalty" type="Label" parent="peace_hud"]

anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 68.0
margin/right = -2.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="money" type="Label" parent="peace_hud"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 68.0
margin/right = 281.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="war_hud" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1089.0
margin/top = 1.0
margin/right = 1280.0
margin/bottom = 91.0
__meta__ = { "_edit_lock_":true }

[node name="senemy_sword_sprite" type="Sprite" parent="war_hud"]

transform/pos = Vector2( 343.828, 359.31 )
texture = ExtResource( 3 )
flip_h = true
__meta__ = { "_edit_lock_":true }

[node name="enemy_shield_sprite" type="Sprite" parent="war_hud"]

transform/pos = Vector2( -251.746, 360.549 )
texture = ExtResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="enemy_power" type="Label" parent="war_hud"]

anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 68.0
margin/right = -2.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="enemy_defense" type="Label" parent="war_hud"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 68.0
margin/right = 281.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="season" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 589.0
margin/right = 157.0
margin/bottom = 624.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="season_text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 587.0
margin/right = 114.0
margin/bottom = 622.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "Season:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="windmill" type="Node2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="sprite" type="Sprite" parent="windmill"]

texture = ExtResource( 7 )
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="windmill"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_sprite" type="AnimatedSprite" parent="windmill"]

transform/pos = Vector2( 409.374, -175.452 )
frames = SubResource( 2 )
animation = "default"
frame = 6
playing = true

[node name="forge" type="Node2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="anim_sprite" type="AnimatedSprite" parent="forge"]

frames = SubResource( 3 )
animation = "default"
playing = true
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="forge"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="village" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="sprite" type="Sprite" parent="village"]

texture = ExtResource( 23 )
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="village"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="moat" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="sprite" type="Sprite" parent="moat"]

texture = ExtResource( 24 )
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="moat"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="market" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="sprite" type="Sprite" parent="market"]

texture = ExtResource( 25 )
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="market"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="tower" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 640, 360 )
__meta__ = { "_edit_lock_":true }

[node name="sprite" type="Sprite" parent="tower"]

texture = ExtResource( 26 )
__meta__ = { "_edit_lock_":true }

[node name="anim_blink" type="AnimationPlayer" parent="tower"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="castle_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 640, 360 )
texture = ExtResource( 27 )
__meta__ = { "_edit_lock_":true }

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="background_sprite" type="Sprite" parent="ParallaxBackground"]

transform/pos = Vector2( 640, 360 )
texture = ExtResource( 28 )
__meta__ = { "_edit_lock_":true }

[node name="main_hud_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 640, 360 )
z/z = -1
texture = ExtResource( 29 )
__meta__ = { "_edit_lock_":true }

[node name="player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sword_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.3
default/pitch_scale = 1.0
default/pan = 0.3
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="hammer_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 5.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="soundtrack" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 33 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="help1" type="Label" parent="."]

rect/min_size = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 750.0
margin/top = 590.0
margin/right = 785.0
margin/bottom = 625.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "<="
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="help2" type="Label" parent="."]

rect/min_size = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1242.0
margin/top = 589.0
margin/right = 1277.0
margin/bottom = 624.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.192157, 0.184314, 1 )
text = "=>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }


